2007-03-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-caption-example.c:
	* examples/hildon-scrolled-window-example.c: Adding an example to
	check scrolled window theming.

	* src/hildon-caption.c:
	* src/hildon-caption.h: Adding hildon_caption_set_label_markup to set
	markup on the caption. Fixes NB#51736.

2007-03-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Small fix, check for NULL before comparing
	strings.

2007-03-01  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-banner.c: Do not set the text on the label if it's
	exactly same as the existing text. Fixes some wrapping problems. Fixes
	NB#50496.

2007-02-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-window.c: When the window name is empty, don't put
	extra dash there. Fixes NB#47989.

2007-02-28  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* examples/Makefile.am:
	* examples/hildon-color-button-example.c:
	* examples/hildon-number-editor-example.c: Adding number editor
	example.

	* src/hildon-window.c: Free the list used to detach menus. Fixes the
	MB#1065.

2007-02-19  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* doc/hildon.types:
	* src/Makefile.am:
	* src/hildon-input-mode-hint.h: Removing this file. 
	Now all the input-method related things are declared in gtkenums.h.

	* src/hildon-number-editor.c:
	* src/hildon-range-editor.c:
	* src/hildon-time-editor.c:
	* src/hildon.h: 
	* src/hildon-date-editor.c:
	* src/hildon-get-password-dialog.c: Use the input-mode enums defined
	in gtkenums.h

2007-02-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* debian/changelog:
	* src/hildon-code-dialog.c:
	* src/hildon-code-dialog.h: Adding the
	hildon_code_dialog_set_input_sensitive function requested by Santtu
	Lakkala to enable/disable the input on the code dialog.
