@@ -1,3 +1,13 @@
+2007-03-07  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
+
+	* examples/hildon-hvolumebar-example.c:
+	* examples/hildon-vvolumebar-example.c: Making the bars in examples
+	larger to see if theeming is correct.
+
+	* src/hildon-time-picker-private.h:
+	* src/hildon-time-picker.c: Do not pull the timeout settings in the
+	init function. Do it when needed.
+
 2007-03-02  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 
 
 	* examples/Makefile.am:
